# MovieRate

./: README.md
MovieRate/: pyproject.toml  sql_app.db
MovieRate/movierate/: app.py  models.py  schemas.py
MovieRate/movierate/model/: film.py
MovieRate/templates/: home.html  profile.html
