[tool.poetry]
name = "movierate"
version = "0.1.0"
description = ""
authors = ["Arnoldo Bezerra Pinheiro <arnoldobepi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic-settings = "^2.3.3"
authlib = "^1.3.1"
httpx = "^0.27.0"
itsdangerous = "^2.2.0"
sqlalchemy = "^2.0.0" 


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
